Fix deprecated API usage